Javafx scaling hacks